ingress/nginx/ingress-sample-api-canary.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-api-stable
  namespace: apps-prod
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
    - host: api.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sample-api
                port:
                  number: 80
  tls:
    - hosts:
        - api.example.com
      secretName: sample-api-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-api-canary
  namespace: apps-prod
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "10"
spec:
  ingressClassName: nginx
  rules:
    - host: api.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sample-api-v2
                port:
                  number: 80
  tls:
    - hosts:
        - api.example.com
      secretName: sample-api-tls
